<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:title="@string/communicate">
            <menu>
                <item
                    android:id="@+id/nav_fb"
                    android:icon="@drawable/ic_facebook"
                    android:title="@string/facebook" />
                <item
                    android:id="@+id/nav_email"
                    android:icon="@drawable/ic_email"
                    android:title="@string/email_us" />
                <item
                    android:id="@+id/nav_linkedInn"
                    android:icon="@drawable/ic_linkedin"
                    android:title="@string/linkedin" />
                <item
                    android:id="@+id/nav_twitter"
                    android:icon="@drawable/ic_twitter"
                    android:title="@string/twitter"/>

            </menu>
        </item>
    </group>
</menu>
